adapted animation, added pause in video/audio, modified css (removed calc in most cases), modified components alignment, fixed sidebars color flashing on transition

--- a/src/assets/scss/components/01_atoms/notifications.scss
+++ b/src/assets/scss/components/01_atoms/notifications.scss
@@ -6,7 +6,6 @@
     width: 23.5rem;
     text-align: center;
     line-height: 90px;
-    font-family: 'Apercu';
     font-size: 18px;
     color: $base-secondary-hover;
     overflow: hidden;
