--- a/src/assets/scss/components/02_molecules/pageComponents.scss
+++ b/src/assets/scss/components/02_molecules/pageComponents.scss
@@ -61,7 +61,6 @@
                     overflow: hidden;
                     overflow-y: scroll;
                     color: #2F3133;
-                    font-family: 'Apercu';
                     font-size: 17px;
                     line-height: 32px;
                     letter-spacing: 0.2px;
@@ -72,14 +71,12 @@
                 }
 
                 .typing {
-                    font-family: 'Apercu';
                     line-height: 35px;
                     height: 35px;
                 }
             
                 .autosaved {
                     float: right;
-                    font-family: 'Apercu';
                     line-height: 35px;
                     height: 35px;
                     text-align: right;
@@ -87,7 +84,6 @@
             
                 .icon {
                     float: right;
-                    font-family: 'Apercu';
                     line-height: 35px;
                     height: 35px;
                     width: 20%;
