--- a/src/assets/scss/components/03_organisms/notebookContainer.scss
+++ b/src/assets/scss/components/03_organisms/notebookContainer.scss
@@ -312,14 +312,12 @@ $chapterHeight: 80px;
     }
 
     .typing {
-        font-family: 'Apercu';
         line-height: 35px;
         height: 35px;
     }
 
     .autosaved {
         float: right;
-        font-family: 'Apercu';
         line-height: 35px;
         height: 35px;
         text-align: right;
@@ -327,7 +325,6 @@ $chapterHeight: 80px;
 
     .icon {
         float: right;
-        font-family: 'Apercu';
         line-height: 35px;
         height: 35px;
         width: 20%;
