--- a/src/assets/scss/general/typography.scss
+++ b/src/assets/scss/general/typography.scss
@@ -4,6 +4,7 @@ body, input, textarea, label, .genderLabel {
 
 .font {
   font-family: 'Apercu';
+  font-weight: normal;
 }
 
 .h1 {
